[package]
name = "topic-manifest"
version = "0.1.0"
authors = ["liushuyu <liushuyu011@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
walkdir = "2.3"
clap = "2.33"
rayon = "1.5"
env_logger = "0.8"
parking_lot = "0.11"
nom = "6.0"

[profile.release]
lto = true
