[package]
name = "topic-manifest"
version = "0.2.0"
authors = ["liushuyu <liushuyu011@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
walkdir = "2.3"
clap = "2.33"
env_logger = "0.8"
nom = "6.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }

[profile.release]
lto = true
